Change width to prevent layout shift

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -49,7 +49,8 @@ h1 {
 
 .bigger-text {
   z-index: 2;
-  max-width: 90ch;
+  /* max-width: 90ch; */
+  max-width: 920px;
   text-align: center;
 
   p {
